--- a/final/hls4ml.ipynb
+++ b/final/hls4ml.ipynb
@@ -491,6 +491,7 @@
     "\n",
     "# compute fidelity \n",
     "keras_fidelity = 0.5*(e_accuracy + g_accuracy)\n",
+    "keras_fidelity = keras_fidelity*2-1\n",
     "keras_fidelity = 1/2 + (0.5*keras_fidelity)\n",
     "\n",
     "\n",
@@ -512,6 +513,7 @@
     "\n",
     "# compute fidelity \n",
     "hls_fidelity = 0.5*(e_accuracy + g_accuracy)\n",
+    "hls_fidelity = hls_fidelity*2-1\n",
     "hls_fidelity = 1/2 + (0.5*hls_fidelity)\n",
     "\n",
     "\n",
